# aquarium-light-controller

./: Cargo.toml  justfile
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/components/: activationSetting.vue  hueSlider.vue
frontend/app/components/brightness/: setting.vue
frontend/app/components/hue/: setting.vue  slider.vue
frontend/app/components/settings/: activation.vue  brightness.vue  color.vue
frontend/app/pages/: index.vue
frontend/app/utils/: color.ts
frontend/server/api/: see.ts  update.post.ts
frontend/server/utils/: see.ts
frontend/shared/: light.ts  updates.ts
src/: config.rs  main.rs  pwm.rs
