[package]
name = "aquarium-light-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
rppal = "0.22.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"

futures = "0.3.31"
reqwest-eventsource = "0.6.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
